samples/_failures_safe/1761341887_ba1dc6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ad3125c.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_2ad3125c.c:184:12: error: missing terminating " character
  184 |     printf("Dijkstra distances from vertex %d:\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2ad3125c.c:184:5: error: expected expression at end of input
  184 |     printf("Dijkstra distances from vertex %d:\
      |     ^~~~~~
./samples/SAFE/__tmp_2ad3125c.c:184:5: error: expected declaration or statement at end of input
